--- a/src/main/resources/agentFace/OwnerAgent.html
+++ b/src/main/resources/agentFace/OwnerAgent.html
@@ -110,8 +110,17 @@
 
                 <label class="form-label">Opis stacji</label>
                 <div class="input-group mb-3">
-                    <textarea type="text" class="form-control" id="editDescription">
-                    </textarea>
+                    <textarea type="text" class="form-control" id="editDescription"></textarea>
+                </div>
+
+                <label class="form-label">Latitude</label>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" id="editLatitude">
+                </div>
+
+                <label class="form-label">Longitude</label>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" id="editLongitude">
                 </div>
 
                 <button type="button" class="btn btn-primary" id="saveDescriptionBtn">Zapisz</button>
