wyszukiwanie po odleglosci

--- a/src/main/resources/agentFace/UserAgent.html
+++ b/src/main/resources/agentFace/UserAgent.html
@@ -70,6 +70,9 @@
                     Wyszukaj bliskie stacje paliwowe
                 </button>
             </li>
+            <li>
+                <input type="text" class="form-control" id="radius" placeholder="promien [km]">
+            </li>
         </ul>
     </div>
 
