--- a/src/main/resources/agentFace/PartnerAgent.html
+++ b/src/main/resources/agentFace/PartnerAgent.html
@@ -48,6 +48,7 @@
             <th scope="col">#</th>
             <th scope="col">Nazwa</th>
             <th scope="col">Opis</th>
+            <th scope="col">Rezerwacje</th>
             <th scope="col"></th>
         </tr>
         </thead>
@@ -74,6 +75,10 @@
                 <label class="form-label">Opis</label>
                 <div class="input-group mb-3">
                     <textarea type="text" class="form-control" id="addPromotionDescription"></textarea>
+                </div>
+                <label class="form-label">Możliwa liczba rezerwacji</label>
+                <div class="input-group mb-3">
+                    <input type="number" class="form-control" id="addPromotionNumber">
                 </div>
             </div>
 
