--- a/src/main/resources/agentFace/UserAgent.html
+++ b/src/main/resources/agentFace/UserAgent.html
@@ -112,6 +112,7 @@
             <th scope="col">Partner</th>
             <th scope="col">Nazwa</th>
             <th scope="col">Opis</th>
+            <th scope="col">Rezerwacje</th>
             <th scope="col"></th>
         </tr>
         </thead>
