liczenie najbliższej stacji|, TODO: edycja cen prezz właściciela

--- a/src/main/resources/agentFace/UserAgent.html
+++ b/src/main/resources/agentFace/UserAgent.html
@@ -73,6 +73,11 @@
             <li>
                 <input type="text" class="form-control" id="radius" placeholder="promien [km]">
             </li>
+            <li>
+                <button class="btn btn-secondary" id="searchCheapestPetrolStationsBtn">
+                    Wyszukaj najtańszą stację w pobliżu
+                </button>
+            </li>
         </ul>
     </div>
 
