głosowania i aktualizacja ceny na stacjach

--- a/src/main/resources/agentFace/UserAgent.html
+++ b/src/main/resources/agentFace/UserAgent.html
@@ -98,6 +98,47 @@
 
 </div>
 
+<div class="modal fade" id="votePetrolStationModal">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+
+            <div class="modal-header">
+                <h5 class="modal-title">Głosuj na stację paliwową</h5>
+            </div>
+
+            <div class="modal-body">
+
+                <label class="form-label">Identyfikator stacji</label>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" id="votePetrolUniqueName" disabled>
+                </div>
+
+                <hr>
+
+                <label class="form-label">PB95</label>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" id="votePetrolPb95">
+                </div>
+
+                <label class="form-label">PB98</label>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" id="votePetrolPb98">
+                </div>
+
+                <label class="form-label">Diesel</label>
+                <div class="input-group mb-3">
+                    <input type="text" class="form-control" id="votePetrolDiesel">
+                </div>
+
+                <button type="button" class="btn btn-primary" id="saveVote1PetrolBtn">Aktualizuj</button>
+                <button type="button" class="btn btn-primary" id="saveVote2PetrolBtn">Głosuj</button>
+            </div>
+
+        </div>
+    </div>
+</div>
+
+
 <div class="container">
     <div class="navbar">
         <span class="navbar-brand">Promocje</span>
