--- a/src/main/resources/agentFace/PylonAgent.html
+++ b/src/main/resources/agentFace/PylonAgent.html
@@ -46,7 +46,7 @@
         <input type="text" class="form-control" id="editPetrolDiesel">
     </div>
 
-    <button type="button" class="btn btn-primary" id="refreshPetrolBtn">Odświerz</button>
+    <button type="button" class="btn btn-primary" id="refreshPetrolBtn">Odśwież</button>
     <button type="button" class="btn btn-primary" id="savePetrolBtn">Zapisz</button>
 
 </div>
