--- a/src/main/resources/agentFace/UserAgent.html
+++ b/src/main/resources/agentFace/UserAgent.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="UserAgent.css">
 
-    <title>Title</title>
+    <title>User</title>
 
 </head>
 <body>
@@ -130,8 +130,8 @@
                     <input type="text" class="form-control" id="votePetrolDiesel">
                 </div>
 
-                <button type="button" class="btn btn-primary" id="saveVote1PetrolBtn">Aktualizuj</button>
-                <button type="button" class="btn btn-primary" id="saveVote2PetrolBtn">Głosuj</button>
+                <button type="button" class="btn btn-primary" id="saveVote1PetrolBtn">Głosuj</button>
+<!--                <button type="button" class="btn btn-primary" id="saveVote2PetrolBtn">Głosuj</button>-->
             </div>
 
         </div>
